--- a/src/ProgressDialogEx/packages.config
+++ b/src/ProgressDialogEx/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
-  <package id="MvvmLightLibs" version="4.1.27.0" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="MvvmLight" version="5.0.2.0" targetFramework="net45" />
+  <package id="MvvmLightLibs" version="5.0.2.0" targetFramework="net45" />
 </packages>
